// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoyageSection should render the voyage section for a RoRo v2 accompanied task 1`] = `
<section
  className="task-list--voyage-section"
>
  <div>
    <div
      className="govuk-grid-row grid-background--greyed"
    >
      <div
        className="govuk-grid-column-one-quarter govuk-!-padding-left-9"
      >
        <i
          className="icon-position--left c-icon-hgv"
        />
        <p
          className="govuk-body-s content-line-one govuk-!-margin-bottom-0 govuk-!-padding-left-1"
        >
          Scania
           
          R-Series
        </p>
        <span
          className="govuk-body-s govuk-!-margin-bottom-0 govuk-!-font-weight-bold govuk-!-padding-left-1"
        >
          <span
            className="govuk-font-weight-bold"
          >
            GB09NFD
          </span>
        </span>
      </div>
      <div
        className="govuk-grid-column-three-quarters govuk-!-padding-right-7 align-right"
      >
        <i
          className="c-icon-ship"
        />
        <p
          className="content-line-one govuk-!-padding-right-2"
        >
          DFDS voyage of KHALEESI SEAWAYS, arrived 2 years ago
        </p>
        <p
          className="govuk-body-s content-line-two govuk-!-padding-right-2"
        >
          4 Aug 2020 at 13:10
          <span
            className="dot"
          />
          <span
            className="govuk-!-font-weight-bold"
          >
            DOV
          </span>
           →
          <span
            className="govuk-!-font-weight-bold"
          >
             
            CAL
          </span>
          <span
            className="dot"
          />
          4 Aug 2020 at 13:55
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`VoyageSection should render the voyage section for a RoRo v2 foot passenger task 1`] = `
<section
  className="task-list--voyage-section"
>
  <div>
    <div
      className="govuk-grid-row grid-background--greyed"
    >
      <div
        className="govuk-grid-column-one-quarter govuk-!-padding-left-9"
      >
        <i
          className="icon-position--left c-icon-person"
        />
        <p
          className="govuk-body-s content-line-one govuk-!-margin-bottom-0 govuk-!-padding-left-1"
        >
          Single passenger
        </p>
        <span
          className="govuk-body-s govuk-!-margin-bottom-0 govuk-!-font-weight-bold govuk-!-padding-left-1"
        >
          <span
            className="govuk-font-weight-bold"
          >
            1 foot passenger
          </span>
        </span>
      </div>
      <div
        className="govuk-grid-column-three-quarters govuk-!-padding-right-7 align-right"
      >
        <i
          className="c-icon-ship"
        />
        <p
          className="content-line-one govuk-!-padding-right-2"
        >
          Stena Line voyage of Stena Edda, arrived 8 months ago
        </p>
        <p
          className="govuk-body-s content-line-two govuk-!-padding-right-2"
        >
          30 Dec 2021 at 10:30
          <span
            className="dot"
          />
          <span
            className="govuk-!-font-weight-bold"
          >
            BKD
          </span>
           →
          <span
            className="govuk-!-font-weight-bold"
          >
             
            BEL
          </span>
          <span
            className="dot"
          />
          30 Dec 2021 at 18:30
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`VoyageSection should render the voyage section for an airpax task 1`] = `
<section
  className="task-list--voyage-section"
>
  <div>
    <div
      className="govuk-grid-row grid-background--greyed"
    >
      <div
        className="govuk-grid-column-one-quarter govuk-!-padding-left-9"
      >
        <i
          className="icon-position--left c-icon-person"
        />
        <p
          className="govuk-body-s content-line-one govuk-!-margin-bottom-0 govuk-!-padding-left-1"
        >
          Single passenger
        </p>
        <span
          className="govuk-body-s govuk-!-margin-bottom-0 govuk-!-font-weight-bold govuk-!-padding-left-1"
        >
          <span
            className="govuk-font-weight-bold"
          >
            Passenger
             
            <strong
              className="hods-tag  airpax-status airpax-status__green"
            >
              DC
            </strong>
          </span>
        </span>
      </div>
      <div
        className="govuk-grid-column-three-quarters govuk-!-padding-right-7 align-right"
      >
        <i
          className="c-icon-aircraft"
        />
        <p
          className="content-line-one govuk-!-padding-right-2"
        >
          British Airways, 
        flight BA103, 
        Unknown
        </p>
        <p
          className="govuk-body-s content-line-two govuk-!-padding-right-2"
        >
          <span
            className="govuk-!-font-weight-bold"
          >
            BA103
          </span>
          <span
            className="dot"
          />
          7 Aug 2020 at 17:15
          <span
            className="dot"
          />
          <span
            className="govuk-!-font-weight-bold"
          >
            FRA
          </span>
           →
          <span
            className="govuk-!-font-weight-bold"
          >
             
            LHR
          </span>
          <span
            className="dot"
          />
          Unknown
        </p>
      </div>
    </div>
  </div>
</section>
`;
